WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209925
HTMLFormElement should use WeakPtr to keep track of its FormNamedItem
https://bugs.webkit.org/show_bug.cgi?id=209925
Summary
HTMLFormElement should use WeakPtr to keep track of its FormNamedItem
Ryosuke Niwa
Reported
2020-04-02 13:39:36 PDT
Right now HTMLFormElement uses a HashMap of AtomString to a raw pointer of FormNamedItem. We should replace the latter with WeakPtr to the equivalent HTMLElement.
Attachments
Deploys WeakPtr
(6.27 KB, patch)
2020-04-02 13:58 PDT
,
Ryosuke Niwa
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2020-04-02 13:58:39 PDT
Created
attachment 395298
[details]
Deploys WeakPtr
Wenson Hsieh
Comment 2
2020-04-02 16:38:49 PDT
Comment on
attachment 395298
[details]
Deploys WeakPtr The windows EWS test failures seem unrelated.
Ryosuke Niwa
Comment 3
2020-04-03 13:53:44 PDT
(In reply to Wenson Hsieh from
comment #2
)
> Comment on
attachment 395298
[details]
> Deploys WeakPtr > > The windows EWS test failures seem unrelated.
Yup, indeed it's been cleared now.
Ryosuke Niwa
Comment 4
2020-04-03 14:05:21 PDT
Committed
r259513
: <
https://trac.webkit.org/changeset/259513
>
Radar WebKit Bug Importer
Comment 5
2020-04-03 14:06:14 PDT
<
rdar://problem/61274486
>
David Kilzer (:ddkilzer)
Comment 6
2020-04-03 22:06:58 PDT
(In reply to Ryosuke Niwa from
comment #4
)
> Committed
r259513
: <
https://trac.webkit.org/changeset/259513
>
Build fix: Committed
r259527
: <
https://trac.webkit.org/changeset/259527
>
Ryosuke Niwa
Comment 7
2020-04-03 22:11:31 PDT
(In reply to David Kilzer (:ddkilzer) from
comment #6
)
> (In reply to Ryosuke Niwa from
comment #4
) > > Committed
r259513
: <
https://trac.webkit.org/changeset/259513
> > > Build fix: > > Committed
r259527
: <
https://trac.webkit.org/changeset/259527
>
Oh oops, thanks for the build fix but that's wrong :( We shouldn't be enabling this assertions even when security assertions are enabled.
David Kilzer (:ddkilzer)
Comment 8
2020-04-04 21:16:32 PDT
(In reply to Ryosuke Niwa from
comment #7
)
> (In reply to David Kilzer (:ddkilzer) from
comment #6
) > > (In reply to Ryosuke Niwa from
comment #4
) > > > Committed
r259513
: <
https://trac.webkit.org/changeset/259513
> > > > > Build fix: > > > > Committed
r259527
: <
https://trac.webkit.org/changeset/259527
> > > Oh oops, thanks for the build fix but that's wrong :( We shouldn't be > enabling this assertions even when security assertions are enabled.
Committed
r259543
: <
https://trac.webkit.org/changeset/259543
>
Ryosuke Niwa
Comment 9
2020-04-06 12:32:28 PDT
(In reply to David Kilzer (:ddkilzer) from
comment #8
)
> (In reply to Ryosuke Niwa from
comment #7
) > > (In reply to David Kilzer (:ddkilzer) from
comment #6
) > > > (In reply to Ryosuke Niwa from
comment #4
) > > > > Committed
r259513
: <
https://trac.webkit.org/changeset/259513
> > > > > > > Build fix: > > > > > > Committed
r259527
: <
https://trac.webkit.org/changeset/259527
> > > > > Oh oops, thanks for the build fix but that's wrong :( We shouldn't be > > enabling this assertions even when security assertions are enabled. > > Committed
r259543
: <
https://trac.webkit.org/changeset/259543
>
Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug